--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Realtime chatting rooms application with the MERN Stack"
     />
+    <link rel="shortcut icon" href="/assets/icons/icon.png" type="image/png" />
     <title>Chatting Rooms - By Samer A. 🚀</title>
   </head>
   <body>
