finished building the home page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,10 @@
       name="description"
       content="Realtime chatting rooms application with the MERN Stack"
     />
+    <script
+      crossorigin="anonymous"
+      src="https://kit.fontawesome.com/1fef759d34.js"
+    ></script>
     <link rel="shortcut icon" href="/assets/icons/icon.png" type="image/png" />
     <title>Chatting Rooms - By Samer A. 🚀</title>
   </head>
